# sentellent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_workspace_pgvector.py  0003_phase3_memory.py  0004_phase4_multitenancy.py
backend/app/: main.py
backend/app/agent/: checkpoint.py  graph.py  tools.py
backend/app/api/v1/: auth.py  chat.py  health.py  org.py  router.py  workspace.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  rate_limit.py
backend/app/db/: mixins.py  session.py
backend/app/models/: __init__.py  background_job.py  conversation.py  memory_item.py  message.py  organization.py  task.py  user.py  workspace_connection.py
backend/app/schemas/: api.py  common.py  health.py  workspace.py
backend/app/services/: auth.py  calendar.py  chat.py  embeddings.py  encryption.py  gmail.py  google_credentials.py  google_oauth.py  google_scopes.py  jobs.py  memory.py  organization.py  redis_store.py  timezone_utils.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: email_ingestion.py  maintenance.py
backend/tests/: conftest.py  test_agent_rate_limit.py  test_alembic.py  test_auth.py  test_chat.py  test_checkpoint.py  test_config.py  test_main.py  test_memory_phase3.py  test_multitenancy_phase4.py  test_phase4_observability.py  test_phase4_worker.py  test_schema.py  test_timezone.py  test_workspace.py
docs/: backend-architecture.md  environment-variables.md  (+2 more)
(+31 files in other folders)
