[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentellent-backend"
version = "0.4.0"
description = "FastAPI backend scaffold for a multi-tenant AI chief of staff"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.19",
  "redis>=5.0.5",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "pgvector>=0.3.2",
  "langchain>=0.3.0",
  "langchain-groq>=0.2.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg-pool>=3.2.0",
  "cryptography>=42.0.0",
  "email-validator>=2.1.0",
  "celery>=5.4.0",
  "slowapi>=0.1.9",
  "structlog>=24.4.0",
  "sentry-sdk[fastapi]>=2.13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.4",
  "mypy>=1.10.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.pytest.ini_options]
testpaths = ["tests"]
